Update: Added new reference specifc to the ga-sammt publication

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -62,3 +62,15 @@
     volume = {68(3)},
     journal = {Photogram Eng Remote Sens},
 }
+
+@ARTICLE{huang_2023_1236788,
+AUTHOR={Huang, Zhi and Nanson, Rachel and McNeil, Mardi and Wenderlich, Michal and Gafeira, Joana and Post, Alexandra and Nichol, Scott},   
+TITLE={Rule-based semi-automated tools for mapping seabed morphology from bathymetry data},      
+JOURNAL={Frontiers in Marine Science},      
+VOLUME={10},           
+YEAR={2023},      
+URL={https://www.frontiersin.org/articles/10.3389/fmars.2023.1236788},       
+DOI={10.3389/fmars.2023.1236788},      
+ISSN={2296-7745},   
+ABSTRACT={Seabed morphology maps and data are critical for knowledge-building and best practice management of marine environments. To facilitate objective and repeatable production of these maps, we have developed a number of semi-automated, rule-based GIS tools (Geoscience Australia’s Semi-automated Morphological Mapping Tools - GA-SaMMT) to operationalise the mapping of a common set of bathymetric high and bathymetric low seabed Morphological Features. The tools have a graphical user interface and were developed using Python scripts under the widely-adopted proprietary ArcGIS Pro platform. The utility of these tools was tested across nine case study areas that represent a diverse range of complex bathymetric and physiographic settings. Overall, the mapping results are found to be more consistent than manual mapping and allow for capture of greater detail across a range of spatial scales. The mapping results demonstrate a number of advantages of GA-SaMMT, including: 1) requirement of only a bathymetry grid as sole data input; 2) flexibility to apply domain knowledge to user-defined tool parameters, or to instead use the default parameter settings; 3) repeatability and consistency in the mapping outputs when using a consistent set of tool parameters (user defined or default); 4) high-degree of objectivity; and 5) efficiency in mapping a large number (thousands) of seabed morphology features in a single dataset. In addition, GA-SaMMT can comprehensively quantify the characteristics of individual seabed bathymetric high and low features, respectively generating 34 and 46 metrics for each type of feature. Our results indicate that attribute metrics are invaluable in the interpretation and modelling of mapped Morphology Features and provide insights into their formative processes and habitat potential for marine communities.}
+}
